# MindfulMoves

./: .gitignore  Game.jsx  LICENSE  README.md  package-lock.json  package.json  requirements.txt
backend/: .gitignore  main.py  pyproject.toml  server.py
backend/DataPipeline/: Data Preprocessing- Lichess Jul 2019.ipynb
backend/DatasetPipeline/: stockfish.py
backend/migrations/: add_difficulty.py
backend/src/: app.py
backend/src/data/: env.py
backend/src/db/: database.py
backend/src/db/models/: __init__.py  game.py  move.py  user.py
backend/src/features/auth/: auth_controller.py  auth_router.py
backend/src/features/game/: game_controller.py  game_router.py  leaderboard_router.py
backend/src/features/game/ai/: engine.py
backend/src/magnus-chessGPT/: model.ipynb  model_wrapper.py
backend/src/magnusChessGPT/: model.ipynb  model_wrapper.py
backend/src/magnusChessGPT/modelConfig/: README.md  adapter_config.json  tokenizer.json  tokenizer_config.json
backend/src/middleware/: auth.py
backend/src/model/: Evaluation Tests.ipynb  chess_router.py  game_session.py  model_functions.py
backend/src/model/ChessGPT-4.5M/: tokenizer_config.json
backend/src/model/demo_model/: added_tokens.json  config.json  tokenizer.json  tokenizer_config.json
backend/src/model/demo_model_2/: README.md  added_tokens.json  config.json  generation_config.json
backend/src/services/: clerk.py
backend/tests/: conftest.py  test_model.py
frontend/: package-lock.json  package.json
frontend/mindfulmoves/: index.html
frontend/src/: App.jsx  Credits.jsx  Game.jsx  Home.jsx  (+10 more)
(+1 files in other folders)
