[tool.pytest.ini_options]
pythonpath = ["."]

[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129.0",
    "bcrypt>=4.0.0",
    "pyjwt>=2.11.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.41.0",
    "chess>=1.10.0",
    "peft>=0.17.1",
    "torch>=2.8.0",
    "transformers>=4.57.1",
    "pytest>=9.0.2",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
